--- a/brittAnderson-github.cabal
+++ b/brittAnderson-github.cabal
@@ -1,4 +1,4 @@
-name:               brittAnderson-github
+name:               brittAnderson-github 
 version:            0.1.0.0
 build-type:         Simple
 cabal-version:      >= 1.10
@@ -7,5 +7,6 @@ executable site
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.9.*
+                  , pandoc
   ghc-options:      -threaded
   default-language: Haskell2010
