--- a/brittAnderson-github.cabal
+++ b/brittAnderson-github.cabal
@@ -6,7 +6,7 @@ cabal-version:      >= 1.10
 executable site
   main-is:          site.hs
   build-depends:    base == 4.*
-                  , hakyll >= 4.9.*
-                  , pandoc
+                  , hakyll == 4.*
+                  , pandoc ==2.*
   ghc-options:      -threaded
   default-language: Haskell2010
